feat(5.0-0): declare tag of base version

--- a/unv-5.0-0/Dockerfile
+++ b/unv-5.0-0/Dockerfile
@@ -1,5 +1,6 @@
 ARG UCS_BASE
-FROM unv-${UCS_BASE}:latest
+ARG UCS_BASE_ERRATA=latest
+FROM unv-${UCS_BASE}:${UCS_BASE_ERRATA}
 
 ARG UCS_TARGET
 ARG ERRATA_LEVEL
