--- a/unv-5.0-2-bsb/Makefile
+++ b/unv-5.0-2-bsb/Makefile
@@ -1,6 +1,6 @@
 UCS_BASE := 5.0-2
 UCS_BASE_ERRATA := 479
-UCS_TARGET := bsb-$(UCS_BASE)
+UCS_TARGET := $(UCS_BASE)-bsb
 ERRATA_LEVEL := $(UCS_BASE_ERRATA)
 
 IMAGE_NAME := unv-$(UCS_TARGET)
